--- a/Resume.html
+++ b/Resume.html
@@ -122,7 +122,7 @@
         <div class="header-accent-1"></div>
         <div class="contact d-flex justify-content-center fw-bolder">
             <div class="mx-4">.Net Developer</div> 
-            <div class="mx-4"><i class="fas fa-map-marker"></i> Lodi, California</div>
+            <div class="mx-4"><i class="fas fa-map-marker-alt"></i> Lodi, California</div>
             <div class="mx-4"><i class="fas fa-phone"></i> 209.329.8754</div>
         </div>
     </div>
