--- a/Resume.html
+++ b/Resume.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <!-- Leaving this all in one file for brevity -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <style> 
@@ -160,19 +161,19 @@
                    <h5>Technology</h5>
                 </div>
                 <div class="text-left">
-                    <div class="badge mb-2">.Net 5-8</div>
-                    <div class="badge mb-2">.Net Framework</div>
-                    <div class="badge mb-2">MS SQL</div>
+                    <div class="badge mb-2">.NET Core</div>
+                    <div class="badge mb-2">SQL</div>
                     <div class="badge mb-2">C#</div>
+                    <div class="badge mb-2">ETL</div>
                     <div class="badge mb-2">API Development</div>
                     <div class="badge mb-2">Angular2</div>
-                    <div class="badge mb-2">Typescript</div>
+                    <div class="badge mb-2">TypeScript</div>
                     <div class="badge mb-2">Entity Framework</div>
                     <div class="badge mb-2">HTML5</div>
                     <div class="badge mb-2">CSS</div>
                     <div class="badge mb-2">Bootstrap</div>
-                    <div class="badge mb-2">Javascript</div>
-                    <div class="badge mb-2">JQuery</div>
+                    <div class="badge mb-2">JavaScript</div>
+                    <div class="badge mb-2">jQuery</div>
                     <div class="badge mb-2">PowerBI</div>
                     <div class="badge mb-2">Python</div>
                     <div class="badge mb-2">Splunk</div>
@@ -197,15 +198,14 @@
                         <p class="job-title">Senior Database/Full Stack Engineer - Lodi Unified School District, Lodi, CA</p>
                         <div class="text-muted date">May 2018 - Present</div>
                         <ul>
-                            <li>Managed the design and implementation of various web applications including a software eligibility system used by school sites to make purchase decisions 
-                                and maintain vendor privacy agreements to ensure compliance with <i>The Student Data Privacy Constorium </i> (SDPC).</li>
-                            <li>Lead projects to migrate existing paper form processes to interactive web applications with scalable workflows.</li>
-                            <li>Met with stakeholders to determine goals and provide well-defined timelines to ensure full transparency.</li>
-                            <li>Created both internal and external facing documentation for other developers and end-users.</li>
+                            <li>Developed various web applications, including a software eligibility system used to make purchase decisions 
+                                and maintain vendor privacy agreements to ensure compliance with <i>The Student Data Privacy Consortium </i> (SDPC).</li>
+                            <li>Led the migration of paper-based processes to interactive web applications with scalable workflows, enhancing efficiency and user experience.</li>
+                            <li>Collaborated with stakeholders to determine goals and provide well-defined timelines to ensure full transparency.</li>
+                            <li>Created comprehensive internal and external-facing documentation for developers and end-users.</li>
                             <li>Ensured proper development testing to minimize application downtime of maintenance and enhancement requests.</li>
-                            <li>Built re-usable Nuget packages and microservices to aid in Authorization, Logging, and Emailing.</li>
-                            <li>Created PowerBI reports to track enrollment, attendance, and special education case loads which all inform critical budget decisions.</li>
-                            <li>Responsible for maintaining the SQL databases behind the Student Information and Finance Systems.</li>
+                            <li>Built reusable NuGet packages and microservices for authorization, logging, and emailing, streamlining development processes.</li>
+                            <li>Implemented automated ETL processes using Python to facilitate data transfer to over 50 different vendors.</li>
                         </ul>
                     </div>
                     <div class="mb-2">
@@ -213,7 +213,7 @@
                         <p class="job-title">Systems Analyst II - Lodi Unified School District, Lodi, CA</p>
                         <div class="text-muted date">July 2016 - May 2018</div>
                         <ul>
-                            <li>Lead project that removed the pen-and-paper process of signing into professional development trainings by using the districts existing RFID staff badges. </li>
+                            <li>Led project that removed the pen-and-paper process of signing into professional development trainings by using the district's existing RFID staff badges. </li>
                             <li>Provided quarterly training to teachers for specific modules in the Student Information System.</li>
                             <li>Built SQL queries, views, stored procedures, and Python scripts to provide data to vendors via SFTP or HTTP requests.</li>
                             <li>Implemented software that expedites over 28,000 students logging in to their applications that results in over an 8% increase in time available for learning.</li>
